--- a/odoo.yaml
+++ b/odoo.yaml
@@ -21,7 +21,7 @@ spec:
     tier: frontend
   type: NodePort
 ---
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: odoo-svr
